# user_backend

./: .gitignore  .pre-commit-config.yaml  README.md  env_example  pyproject.toml  ruff.toml
src/: app.py  main.py  piccolo_conf.py  settings.py  utils.py
src/api/: exception_handlers.py  handlers.py
src/core/: exceptions.py  repositories.py
src/domains/update_action/: factories.py  models.py  piccolo_app.py  repository.py  services.py  tables.py
src/domains/update_action/migrations/: update_action_2024_10_15t21_44_20_049255.py
src/domains/update_action/utils/: pin_code.py
src/domains/users/: exceptions.py  factories.py  models.py  piccolo_app.py  repositories.py  services.py  tables.py
src/domains/users/migrations/: users_2024_10_13t16_46_56_693210.py
src/domains/users/utils/: password.py
src/tests/: conftest.py
src/tests/domains/update_action/: test_models.py  test_repository.py  test_services.py  test_tables.py
src/tests/domains/update_action/utils/: test_pin_code.py
src/tests/domains/users/: test_tables.py
src/tests/use_cases/: test_confirm_email.py  test_password_reset.py  test_update_action_complete.py
src/use_cases/: confirm_email.py  password_reset.py  temp_users.py  update_action_complete.py  users.py
